<resources>
    <string name="app_name">prueba</string>
    <string name="registrar">Registrar</string>
    <string name="consultar">Consultar</string>
    <string name="lista_de_usuarios2">Lista de Usuarios2</string>
    <string name="lista_de_usuarios">Lista de Usuarios</string>
    <string name="registro_de_usuarios">Registro de Usuarios</string>
    <string name="agregar">Agregar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="buscar">Buscar</string>
    <string name="seleccione_una_opci_n">Seleccione una Opción</string>
    <string name="id_mascota">id mascota</string>
    <string name="informacion_mascota">INFORMACION MASCOTA</string>
    <string name="raza">Raza</string>
    <string name="informacion_due_o">INFORMACION DUEÑO</string>
    <string name="_75845682">75845682</string>
    <string name="_1094">1094</string>
    <string name="registrar_usuarios">Registrar Usuarios</string>
    <string name="consultar_lista_usando_recycler">Consultar Lista Usando Recycler</string>
    <string name="consultar_lista_mascotas">Consultar Lista Mascotas</string>
    <string name="consultar_lista_usuario_usando_listview">Consultar Lista Usuario Usando ListView</string>
    <string name="consultar_lista_usuario_usando_spinner">Consultar Lista Usuario Usando Spinner</string>
    <string name="consultar_usuario">Consultar Usuario</string>
    <string name="registrar_mascota">Registrar Mascota</string>
    <string name="due_o">Dueño</string>
    <string name="raza_mascota">Raza Mascota</string>
    <string name="registro_de_mascotas">REGISTRO DE MASCOTAS</string>
    <string name="nombre_mascota">Nombre Mascota</string>
    <string name="id">id</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="_1094899">1094899</string>
    <string name="documento">Documento</string>
    <string name="nombre">nombre</string>
    <string name="cristian_david_henao">Cristian David Henao</string>
    <string name="_311358639">311358639</string>
    <string name="telefono">telefono</string>
    <string name="todo">TODO</string>

</resources>
