<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalle_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".DetalleUsuarioActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textStyle="bold"
        android:textSize="18sp"/>


    <TextView
        android:id="@+id/campoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1094"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/campoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cristian_david_henao"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textStyle="bold"
        android:textSize="18sp"/>


    <TextView
        android:id="@+id/campoTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_75845682"
        android:layout_marginBottom="10dp"/>


</LinearLayout>