<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_consultar_usuarios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ConsultarUsuariosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/documentoId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/documento"
            android:layout_weight="0.93"
            android:inputType="text"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/buscar"
            android:onClick="onClick"/>


    </LinearLayout>

    <EditText
        android:id="@+id/campoNombreConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/campoTelefonoConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"
            android:layout_weight="0.5"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:layout_weight="0.5"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>




</LinearLayout>