<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_consulta_combo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ConsultaComboActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccione_una_opci_n"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginBottom="20dp"/>

    <Spinner
        android:id="@+id/comboPersonas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/documento"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDocumento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:layout_above="@+id/txtNombre" />


        <TextView
            android:id="@+id/txtTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignStart="@+id/txtNombre" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignStart="@+id/txtDocumento" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textStyle="bold"
            android:id="@+id/textView2"
            android:layout_above="@+id/textView3"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textStyle="bold"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true" />


    </RelativeLayout>




</LinearLayout>